--- a/WebsiteHW7.html
+++ b/WebsiteHW7.html
@@ -1,11 +1,7 @@
-﻿<!DOCTYPE html>
+<!doctype html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+<html>
 
-</body>
+
+<link rel="stylesheet" href="stylesheet1.css" />
 </html>
