made multiple html files. still trying to figure out how to make each page different in css.

--- a/WebsiteHW7.html
+++ b/WebsiteHW7.html
@@ -1,7 +1,27 @@
 <!doctype html>
 
 <html>
+<head>
+    <title>Website Homework</title>
+    <link rel="stylesheet" href="stylesheet1.css"/>
+</head>
+
+<body>
+    <h1><center>Chad Simmons Website</center></h1>
 
 
-<link rel="stylesheet" href="stylesheet1.css" />
+    <h2><center>The site will inform the reader a little bit about myself. 
+        There will be a page about my background, my personal accomplishments, and skill sets that I am proficient in.  </center></h2>
+
+    
+   <!--<div id="box1">
+       <img src="https://i.pinimg.com/236x/78/66/54/78665479e2fca114edecdac5bc5c35c1--ou-football-boomer-sooner.jpg"/>-->
+    <nav>
+        put div and id for each link and match it with the css page. this might fix the problem
+        <li><a href="about.html" target="_blank">About</a></li>
+        <li><a href="projects.html" target="_blank">Projects</a></li>
+        <li><a href="skillsets.html" target="_blank">Skill Sets</a></li>
+    </nav>
+</body>
 </html>
+
