Finished the first page for now and have started the second page.

--- a/about.html
+++ b/about.html
@@ -2,11 +2,12 @@
 
 <html>
 <head>
-    <title>Website Homework</title>
-    <link rel="stylesheet" href="stylesheet1.css" />
+    <title>About Link</title>
+    <link rel="stylesheet" href="stylesheetabout.css"/>
 </head>
 
 <body>
-
+    <h1><center>A Little Bit About Myself</center></h1>
+    
 </body>
 </html>
