--- a/about.html
+++ b/about.html
@@ -8,6 +8,13 @@
 
 <body>
     <h1><center>A Little Bit About Myself</center></h1>
+
+    <nav>
+        <li><a href="https://limestone.k12.il.us/" target="_blank">High School</a></li>
+        <li><a href="https://occc.edu" target="_blank">College</a></li>
+    </nav>
+
+
     
 </body>
 </html>
