almost done with about page. Need to adjust the img.

--- a/about.html
+++ b/about.html
@@ -11,10 +11,26 @@
 
     <nav>
         <li><a href="https://limestone.k12.il.us/" target="_blank">High School</a></li>
-        <li><a href="https://occc.edu" target="_blank">College</a></li>
+        <li><a href="https://occc.edu" target="_blank">OCCC</a></li>
+        <li><a href="https://ou.edu" target="_blank">OU</a></li>
     </nav>
 
-
+<div style="float: right">
+    <div id="info">
+        <h2>I was born and raised in Peoria Illinois. I graduated 
+        in 2008 from Limestone High School. After this our family
+        moved to Norman Oklahoma. I started working at The Postal Training Center and I am still working their now.
+        In 2013 I went to Oklahoma City Community College for an Associates in Buisness.
+        I recieved my Associates in Business in 2018. I am currently in my second semester at Oklahoma University
+        majoring in MIS.</h2>
+    </div>
+</div>
+    <div id="image">
+        <img src="http://www.limestone.k12.il.us/newpics/lchs%20in%20blue1.jpg"/>
+    </div>
+    <div id="image2">
+        <img id="img2" src="https://pbs.twimg.com/profile_images/2147759701/OCCClogo_400x400.jpg"/>
+    </div>
     
 </body>
 </html>
