Done with all pages. Just have to make some minor tweaks.

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <h1><center>A Little Bit About Myself</center></h1>
 
     <nav>
-        <li><a href="https://limestone.k12.il.us/" target="_blank">High School</a></li>
+        <li><a href="http://limestone.k12.il.us/" target="_blank">High School</a></li>
         <li><a href="https://occc.edu" target="_blank">OCCC</a></li>
         <li><a href="https://ou.edu" target="_blank">OU</a></li>
     </nav>
