--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         <li><a href="http://limestone.k12.il.us/" target="_blank">High School</a></li>
         <li><a href="https://occc.edu" target="_blank">OCCC</a></li>
         <li><a href="https://ou.edu" target="_blank">OU</a></li>
+        <li><a href="/index"></a></li>
     </nav>
 
 <div style="float: right">
