Making minor adjustments

--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-    <h1><center>A Little Bit About Myself</center></h1>
+    <h1>A Little Bit About Myself</h1>
 
-    <nav>
-        <li><a href="http://limestone.k12.il.us/" target="_blank">High School</a></li>
-        <li><a href="https://occc.edu" target="_blank">OCCC</a></li>
-        <li><a href="https://ou.edu" target="_blank">OU</a></li>
-        <li><a href="/index"></a></li>
-    </nav>
+    <ul>
+        <li><a href="http://limestone.k12.il.us/">High School</a></li>
+        <li><a href="https://occc.edu">OCCC</a></li>
+        <li><a href="https://ou.edu">OU</a></li>
+        <li><a href="index.html">Home</a></li>
+    </ul>
 
 <div style="float: right">
     <div id="info">
