--- a/skillsets.html
+++ b/skillsets.html
@@ -6,22 +6,25 @@
 </head>
 
 <body>
-    <h1><center>Skill Sets</center></h1>
+    <h1>Skill Sets</h1>
 
-    <nav>
-        <li><a href="https://visualstudio.microsoft.com/" target="_blank">Visual Studio</a></li>
-        <li><a href="https://searchsqlserver.techtarget.com/definition/database" target="_blank">Database</a></li>
-        <li><a href="https://products.office.com/en-us/office-online/documents-spreadsheets-presentations-office-online" target="_blank">Microsoft</a></li>
-        <li><a href="http://services.traxintl.com/contracts/usps-nced/" target="_blank">Work</a></li>
-    </nav>
+    <ul>
+        <li><a href="https://visualstudio.microsoft.com/">Visual Studio</a></li>
+        <li><a href="https://searchsqlserver.techtarget.com/definition/database">Database</a></li>
+        <li><a href="https://products.office.com/en-us/office-online/documents-spreadsheets-presentations-office-online">Microsoft</a></li>
+        <li><a href="http://services.traxintl.com/contracts/usps-nced/">Work</a></li>
+        <li><a href="index.html">Home</a></li>
+    </ul>
 
     <div style="float: right"/>
     <div id="skills">
         <h2>
+            
             <center>Competent in C# in Visual Studio</center>
             <center>Competent in Microsoft Word, Powerpoint, and Excel</center>
             <center>Constructing the front and back-end of a Database in SQL Server</center>
             <center>Managing a shift for the last 5 years at the Postal Training Center</center>
+            
         </h2>
     </div>
     </div>
